<resources>
    <string name="app_name">Plan To Go</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="planner">Planner</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_header_default_name">Guest</string>
    <string name="profile_header_action">Login / Register</string>
    <string name="attraction_near_you">Attraction near you</string>
    <string name="attractions">Attractions</string>
    <string name="show_all">Show all</string>
    <string name="loading">Loading...</string>
    <string name="photo">Photos</string>
    <string name="overview">Overview</string>
    <string name="overview_active"><u>Overview</u></string>
    <string name="reviews">Reviews</string>
    <string name="reviews_active"><u>Reviews</u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="Email">Email</string>
    <string name="have_an_account">Have an account?</string>
    <string name="map">map</string>
    <string name="add_to_trip">Add to trip</string>
    <string name="no_reviews">No reviews</string>
    <string name="night_mode">Night Mode</string>
    <string name="help">Help</string>
    <string name="term_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="user_name">User Name</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="select_trip_to_be_added">Select Trip to be Added</string>
    <string name="collapse_modal">collapse modal</string>
    <string name="location">Location</string>
    <string name="add_trip_header">Build an itinerary and map out your upcoming travel plans</string>
    <string name="trip_name">Trip Name</string>
    <string name="where_are_you_heading">Where are you heading? eg: Malaysia,Japan...</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="notes_reminder">Notes. any reminder?</string>
    <string name="start_planning">Start Planning</string>
    <string name="add_new_trip">Add new trip</string>
    <string name="attraction_showcase_image">Attraction showcase image</string>
    <string name="edit_trip">Edit trip</string>
    <string name="navigate_to_map">navigate to map</string>
    <string name="start_date_end_date">Start Date - End Date</string>
    <string name="itinerary">Itinerary</string>
    <string name="itinerary_active"><u>Itinerary</u></string>
    <string name="unknown_location">Unknown Location</string>
    <string name="unknown_address">Unknown Address</string>
    <string name="no_saved_trips_yet">No Saved Trips Yet</string>
</resources>