<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top_section_container"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:elevation="10dp"
        android:background="@color/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ll_nav_tab_container"
        >
        <TextView
            android:id="@+id/tv_attraction_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <RatingBar
            android:id="@+id/rb_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="10dp"
            style="@style/Widget.AppCompat.RatingBar.Small"
            app:layout_constraintTop_toBottomOf="@+id/tv_attraction_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_rating_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginVertical="6dp"
            android:layout_marginHorizontal="6dp"
            app:layout_constraintStart_toEndOf="@+id/rb_rating"
            app:layout_constraintTop_toBottomOf="@+id/tv_attraction_name"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tv_carousel_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@id/rb_rating"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_carousel_header_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_all"
            android:textSize="12sp"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rb_rating"
            />

        <FrameLayout
            android:id="@+id/fl_carousel_container"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/tv_carousel_header"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ll_nav_tab_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/nav_bar_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_top_section_container">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:text="@string/overview"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_content_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_nav_tab_container"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>